packages/typ/tests/fixtures/diagnostics/0377_labels_wrong_x_type_07.ml.expected
File "0377_labels_wrong_x_type_07.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0377_labels_wrong_x_type_07 is not a valid module name.

File "0377_labels_wrong_x_type_07.ml", line 2, characters 20-24:
2 | let _ = pick_eta ~x:true ~y:true
                        ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
